Sliders overlap banner with gradient pseudo working correctly

--- a/src/assets/styles/components/appbanner.scss
+++ b/src/assets/styles/components/appbanner.scss
@@ -1,13 +1,28 @@
 .AppBanner {
-  height:calc(100vh + 80px);
-  padding-left: 3rem;
-  padding-right: 3rem;
+  position: relative;
+  height: calc(100vh + 200px);
   padding-top: 120px;
-  background-size:cover;
-  background-position: center;
+  padding-right: 3rem;
+  padding-left: 3rem;
   background-repeat: no-repeat;
-  &__content-wrapper{
-    width:40%;
-    min-width:300px;
+  background-position: center;
+  background-size: cover;
+
+  &:after {
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 400px;
+    content: '';
+    background: linear-gradient(to bottom, rgba(20,20,20,0) 0%,rgba(20,20,20,1) 100%);
+  }
+
+  &__content-wrapper {
+    position:relative;
+    z-index: 2;
+    width: 40%;
+    min-width: 300px;
   }
 }
