--- a/src/assets/styles/components/appslider.scss
+++ b/src/assets/styles/components/appslider.scss
@@ -1,6 +1,12 @@
 @import '../../../../node_modules/tiny-slider/src/tiny-slider.scss';
 
 .AppSlider {
+  &__minus-margin {
+    position: relative;
+    z-index: 1;
+    margin-top: -200px;
+  }
+
   .tns-item {
     height: 131px;
     background: #fafafb;
